--- a/package.json
+++ b/package.json
@@ -2,7 +2,5 @@
   "name": "tarot-card-img",
   "version": "0.0.0",
   "description": "Rider Waite's Tarot Cards",
-  "repository": "https://github.com/smrsan/tarot.git",
-  "author": "Rider Waite",
-  "license": "MIT"
+  "author": "Rider Waite"
 }
